[gd_scene load_steps=3 format=3 uid="uid://cjgijbfxixe67"]

[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1_dds2y"]
[ext_resource type="Script" path="res://sources/gui/Login.gd" id="2_2pjk7"]

[node name="Login" type="PanelContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(360, 100)
offset_right = 280.0
offset_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_dds2y")
script = ExtResource("2_2pjk7")
blockActions = true

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2
metadata/_edit_use_custom_anchors = true

[node name="GridContainer" type="GridContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Name"
vertical_alignment = 1

[node name="NameContainer" type="PanelContainer" parent="Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameText" type="LineEdit" parent="Margin/VBoxContainer/GridContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../../PasswordContainer/PasswordText")
focus_previous = NodePath("../../../SignBar/Register")
focus_mode = 1
max_length = 255
clear_button_enabled = true
caret_blink = true
caret_blink_interval = 0.5

[node name="PasswordLabel" type="Label" parent="Margin/VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Password"
vertical_alignment = 1

[node name="PasswordContainer" type="PanelContainer" parent="Margin/VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="PasswordText" type="LineEdit" parent="Margin/VBoxContainer/GridContainer/PasswordContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_next = NodePath("../../../SignBar/Play")
focus_previous = NodePath("../../NameContainer/NameText")
focus_mode = 1
placeholder_text = "Type here"
max_length = 255
clear_button_enabled = true
select_all_on_focus = true
caret_blink = true
caret_blink_interval = 0.5
secret = true

[node name="Control" type="Control" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Warning" type="RichTextLabel" parent="Margin/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="SignBar" type="HBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="OnlineButton" type="CheckBox" parent="Margin/VBoxContainer/SignBar"]
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Switch between an online or offline experience.
Your offline progress is local and won't be synced."
focus_previous = NodePath("../../GridContainer/NameContainer/NameText")
theme_type_variation = &"PearlBox"
button_pressed = true
text = "Online"

[node name="Host" type="Button" parent="Margin/VBoxContainer/SignBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_next = NodePath("../Play")
focus_previous = NodePath("../../GridContainer/PasswordContainer/PasswordText")
text = "Host"

[node name="Play" type="Button" parent="Margin/VBoxContainer/SignBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_next = NodePath("../../GridContainer/NameContainer/NameText")
focus_previous = NodePath("../../GridContainer/PasswordContainer/PasswordText")
text = "Play"

[node name="Register" type="Button" parent="Margin/VBoxContainer/SignBar"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_next = NodePath("../../GridContainer/NameContainer/NameText")
focus_previous = NodePath("../Play")
text = "Register"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_submitted" from="Margin/VBoxContainer/GridContainer/NameContainer/NameText" to="." method="_on_text_submitted"]
[connection signal="text_submitted" from="Margin/VBoxContainer/GridContainer/PasswordContainer/PasswordText" to="." method="_on_text_submitted"]
[connection signal="meta_clicked" from="Margin/VBoxContainer/Warning" to="." method="_warning_on_meta_clicked"]
[connection signal="toggled" from="Margin/VBoxContainer/SignBar/OnlineButton" to="." method="_on_online_button_toggled"]
[connection signal="pressed" from="Margin/VBoxContainer/SignBar/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/SignBar/Play" to="." method="_on_play_pressed"]
